# rime-table-decompiler

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md
.github/workflows/: build.yml
src/: CMakeLists.txt  main.cpp
src/rime/: build_config.h.in  common.h
src/rime/dict/: mapped_file.h  table.cc  vocabulary.h
